feat: memory-map artifact files in load(Path)
Implements RulesetLoader.load(Path, LoadOptions) in CsvRulesetLoader. With
memoryMap() the artifact file is mapped read-only via FileChannel.map and
the lazy decoders read column data straight from the mapping - the artifact
never lands on the heap as a byte[], which is what keeps large tables
within the heap budget. onHeap() from a path reads the bytes into a heap
buffer instead.

Metadata is reconstructed from the parsed artifact since there is no
in-memory CompiledRuleset on this path. LoadedRulesetImpl now holds the
FileChannel as an AutoCloseable and closes it in close() (idempotent;
mapping released by the buffer's Cleaner on GC - no Unsafe.invokeCleaner).
The map() failure path closes the channel to avoid leaks.

Adds FileBackedLoadTest: mapped-file load matches in-memory load across IN,
BETWEEN and blank rows, and close() is safe to call twice.